loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: '(' expected but identifier found.
while !estSurBiscuit() {
      ^BaggleSeeker:5: error: illegal start of simple expression
	}
        ^